--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	</head>
 	<body>
 		<h1>Pierwszy projekt GIT</h1>
+		
+		<p>Testowy opis</p>
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
